--- a/docker_lesson/simple_container/templates/index.html
+++ b/docker_lesson/simple_container/templates/index.html
@@ -1,7 +1,12 @@
 <html>
-<title>docker demo flask</title>
-<head></head>
+<head>
+<title>test</title>
+</head>
 <body>
-トップページです。
+    <form action="/form" method="POST" enctype="multipart/form-data">
+        <input type="text" name="form_name">
+        <input type="text" name="form_pass">
+        <input type="submit" value="送信">
+    </form>
 </body>
 </html>
